--- a/home.html
+++ b/home.html
@@ -24,13 +24,224 @@
             <li><div class="sk-icon-global"></div></li>
         </ul>
     </nav>
-    
-    <div id="mySlider"></div>
+    <section id="contain-imagehero">
+      <div id="mySlider"></div>
+    </section>
+    <!-- list by category-content -->
+    <section id="catalogByCategory" class="container-category">
+      <h1> Pilih Modul Materi Yang Kamu Minati</h1>
+      <p class="sk-span-detail">tersedia berbagai modul dari video dan audio</p>
+      <ul>
+        <li><a href="#">Bahasa Arab</a></li>
+        <li><a href="#">Bisnis Umkm</a></li>
+        <li><a href="#">Desain & IT</a></li>
+        <li><a href="#">Dinniyah</a></li>
+        <li><a href="#">Manajement</a></li>
+        <li><a href="#">Parenting</a></li>
+        <li><a href="#">Pengembangan Diri</a></li>
+      </ul>
+      <section id="detailCatalogByCategory">
+        <h2>Kembangkan Dirimu Dengan Bahasa Arab</h2>
+        <p>ikuti salah satu rangkaian kursus bahasa arab sekolahskill dan pelajari membaca tulisan arab tanpa harokat,berdiskusi,menulis,serta menerjemahkan kalimat, kamu bisa mengikuti ini mulai dari awal sampai tingkat mahir,segera bergabung..</p>
+        <button class="sk-btn sk-btn-border sk-btn-bahasaarab">Lihat Bahasa Arab</button>
+        <div class="sk-container-flex">
+          <div class="sk-card">
+            <div class="sk-card-header">
+              <iframe width="232" height="133" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
+            <div class="sk-card-body">
+              <span class="sk-title-subcard">Belajar Bahasa Arab</span>:<span>Kata Kerja Dalam Bahasa Arab</span>
+              <span class="sk-subtitle-subcard">Pemateri</span>: <span class="sk-subtitle-subcard-gray">Ustadz Abdul Somad</span>
+              <span class="sk-subtitle-subcard">Rating 4.4  dari 5</span>
+            </div>
+          </div>
+          <div class="sk-card">
+            <div class="sk-card-header">
+              <iframe width="232" height="133" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
+            <div class="sk-card-body">
+              <span class="sk-title-subcard">Belajar Bahasa Arab</span>:<span>Kata Kerja Dalam Bahasa Arab</span>
+              <span class="sk-subtitle-subcard">Pemateri</span>: <span class="sk-subtitle-subcard-gray">Ustadz Abdul Somad</span>
+              <span class="sk-subtitle-subcard">Rating 4.4  dari 5</span>
+            </div>
+          </div>
+          <div class="sk-card">
+            <div class="sk-card-header">
+              <iframe width="232" height="133" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
+            <div class="sk-card-body">
+              <span class="sk-title-subcard">Belajar Bahasa Arab</span>:<span>Kata Kerja Dalam Bahasa Arab</span>
+              <span class="sk-subtitle-subcard">Pemateri</span>: <span class="sk-subtitle-subcard-gray">Ustadz Abdul Somad</span>
+              <span class="sk-subtitle-subcard">Rating 4.4  dari 5</span>
+            </div>
+          </div>
+          <div class="sk-card">
+            <div class="sk-card-header">
+              <iframe width="232" height="133" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
+            <div class="sk-card-body">
+              <span class="sk-title-subcard">Belajar Bahasa Arab</span>:<span>Kata Kerja Dalam Bahasa Arab</span>
+              <span class="sk-subtitle-subcard">Pemateri</span>: <span class="sk-subtitle-subcard-gray">Ustadz Abdul Somad</span>
+              <span class="sk-subtitle-subcard">Rating 4.4  dari 5</span>
+            </div>
+          </div>
+          <div class="sk-card">
+            <div class="sk-card-header">
+              <iframe width="232" height="133" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+            </div>
+            <div class="sk-card-body">
+              <span class="sk-title-subcard">Belajar Bahasa Arab</span>:<span>Kata Kerja Dalam Bahasa Arab</span>
+              <span class="sk-subtitle-subcard">Pemateri</span>: <span class="sk-subtitle-subcard-gray">Ustadz Abdul Somad</span>
+              <span class="sk-subtitle-subcard">Rating 4.4  dari 5</span>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!-- list by category -->
+    <section id="containCategory">
+      <h1>Kategori</h1>
+      <div class="contain-grid-category">
+        <div class="grid-item">
+          <div class="grid-image1"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image2"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image3"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image4"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image5"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image6"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image7"></div>
+        </div>
+        <div class="grid-item">
+          <div class="grid-image8"></div>
+        </div>
+      </div>
+    </section>
+
+    <section id="containByTopic">
+        <h2>Topik Berdasarkan Kategori</h2>
+        <table class="table">
+          <thead>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Bahasa Arab</span></td>
+              <td class="table-cell"> <span class="table-cell-title">Bahasa Bisnis Umkm</span></td>
+              <td class="table-cell"> <span class="table-cell-title">Desain Dan IT</span></td>
+              <td class="table-cell"> <span class="table-cell-title">Parenting</span></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="table-row">
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Nahwu</span><br>
+                <span class="table-cell-subtitle-gray">36,176,787 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Produktif dengan Berbisnis Kue Kering</span><br>
+                <span class="table-cell-subtitle-gray">1,191,385 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Buat Web Sederhana</span><br>
+                <span class="table-cell-subtitle-gray">6,026,907 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Belajar Puasa untuk Anak</span><br>
+                <span class="table-cell-subtitle-gray">10,872,534 murid</span>
+              </td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Ilmu Shorof</span><br>
+                <span class="table-cell-subtitle-gray">11,361,594 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle"></span><br>
+                <span class="table-cell-subtitle-gray"></span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Buat Web Sederhana</span><br>
+                <span class="table-cell-subtitle-gray">10,887,475 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Optimal Golden Age Si Kecil</span><br>
+                <span class="table-cell-subtitle-gray">3,366,814 murid</span>
+              </td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Muhadasah</span><br>
+                <span class="table-cell-subtitle-gray">7,044,878 murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle"></span><br>
+                <span class="table-cell-subtitle-gray"></span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle">Desain Grafik</span><br>
+                <span class="table-cell-subtitle-gray">3,974,254 Murid</span>
+              </td>
+              <td class="table-cell">
+                <span class="table-cell-subtitle"></span><br>
+                <span class="table-cell-subtitle-gray"></span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+    </section>
+    <section id="containByOpening">
+      <div class="container-grid-opening">
+        <div class="grid-item1">
+          <div class="image-opening"></div>
+        </div>
+        <div class="grid-item2">
+          <div  style="width: 500px;" >
+            <h1>Jadi Guru Disini</h1>
+            <span>
+              Dengan menjadi pengajar di sini, kamu dapat bertemu dengan para guru,murid di berbagai daerah dengan latar yang berbeda,serta mendapatkan fasilitas yang menarik
+            </span><br>
+            <button class="sk-btn sk-btn-border">Jadi Guru</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="containByOpening">
+      <div class="container-grid-opening">
+        <div class="grid-item2">
+          <div  style="width: 500px;" >
+            <h1>Jadi Guru Disini</h1>
+            <span>
+              Dengan menjadi pengajar di sini, kamu dapat bertemu dengan para guru,murid di berbagai daerah dengan latar yang berbeda,serta mendapatkan fasilitas yang menarik
+            </span><br>
+            <button class="sk-btn sk-btn-border">Jadi Guru</button>
+          </div>
+        </div>
+        <div class="grid-item3">
+          <div class="image-opening"></div>
+        </div>
+      </div>
+    </section>
+
+
 
     <script type="text/javascript">
         
         class Slider {
-  constructor({container="sliderContainer", textColor=" ", ctaBackground="white", ctaColor="black", autoplay=true, autoplaySpeed=3000, navArrows = true, dots = true, marginTop= 0}) {
+          constructor({container="sliderContainer", textColor=" ", ctaBackground="white", ctaColor="black", autoplay=true, autoplaySpeed=3000, navArrows = true, dots = true, marginTop= 0}) {
     this.currentSlideIndex = 0;
     this.slides = [];
     this.container = document.getElementById(container);
@@ -44,7 +255,7 @@
     this.marginTop = marginTop;
   }
 
-  prevSlide = () => {
+          prevSlide = () => {
     this.nextSlideIndex = (this.currentSlideIndex === 0) ? this.slides.length - 1 : this.currentSlideIndex - 1;
 
     // Add a class to change slide with specific animation
@@ -64,7 +275,7 @@
     this.currentSlideIndex = this.nextSlideIndex;
   }
 
-  nextSlide = () => {
+          nextSlide = () => {
     this.nextSlideIndex = (this.currentSlideIndex === this.slides.length - 1) ? 0 : this.currentSlideIndex + 1;
 
     document
@@ -83,7 +294,7 @@
     this.currentSlideIndex = this.nextSlideIndex;
   }
 
-  goTo = (index) => {
+          goTo = (index) => {
     var diff = (this.currentSlideIndex - index) * 100;
     //console.log(diff);
     this.nextSlideIndex = index;
@@ -108,7 +319,7 @@
     this.currentSlideIndex = this.nextSlideIndex;
   }
 
-  init = () => {
+          init = () => {
 
     var newHTML = `<div id='slider'>`;
 
@@ -188,11 +399,11 @@
     }, this.autoplaySpeed);
   }
 
-  newSlide = (title, subtitle, background, link, cta) => {
+          newSlide = (title, subtitle, background, link, cta) => {
     var slide = new Slide(title, subtitle, background, link, cta, this.slides.length);
     this.slides.push(slide);
   }
-}
+        }
 
 // This function build a single slide
        class Slide {
@@ -204,47 +415,47 @@
             this.cta = cta;
             this.id = "slide" + slideIndex;
         }
-    }
+      }
 
         const settings = {
-			container: "mySlider", //container name
-			textColor: "white", //text color also # or rgba
-			ctaBackground: "#81C784", //button color, dots color and nav arrow color
-			autoplay: true, //true/false
-			autoplaySpeed: 10000, //time slide active before change
-			ctaColor: "white", //cta TEXT color
-			navArrows: true, //false to hide navigations arrows
-			dots: true, //false to hide navigation buttons
-			marginTop: 0, //space above first Slide, usefull when you set this slider in the first page behind header nav, this option allow you to center text manually and move the text down
-		}
+			    container: "mySlider", //container name
+			    textColor: "white", //text color also # or rgba
+			    ctaBackground: "#81C784", //button color, dots color and nav arrow color
+			    autoplay: true, //true/false
+			    autoplaySpeed: 10000, //time slide active before change
+			    ctaColor: "white", //cta TEXT color
+			    navArrows: true, //false to hide navigations arrows
+			    dots: true, //false to hide navigation buttons
+			    marginTop: 0, //space above first Slide, usefull when you set this slider in the first page behind header nav, this option allow you to center text manually and move the text down
+		    }
 
         var miaslider = new Slider(settings);
 
-		miaslider.newSlide(
-            "First Slide",
-            "Lorem ipsum Dolor si amet",
-            "/public/assets/images/banner1.png",
-            "https://codepen.io/emanuelemicheletti/pen/abYarrv" ,
-            "Shop NOW"
-		);
+        miaslider.newSlide(
+                "First Slide",
+                "Lorem ipsum Dolor si amet",
+                "/public/assets/images/banner1.png",
+                "https://codepen.io/emanuelemicheletti/pen/abYarrv" ,
+                "Shop NOW"
+        );
 
-		miaslider.newSlide(
-            "Second Slide",
-            "Lorem ipsum Dolor si amet",
-            "/public/assets/images/banner1.png",
-            "https://codepen.io/emanuelemicheletti/pen/abYarrv",
-            "Open This Product"
-		);
+        miaslider.newSlide(
+                "Second Slide",
+                "Lorem ipsum Dolor si amet",
+                "/public/assets/images/banner1.png",
+                "https://codepen.io/emanuelemicheletti/pen/abYarrv",
+                "Open This Product"
+        );
 
-		miaslider.newSlide(
-            "Third Slide",
-            "Lorem ipsum dolor sit amet",
-            "/public/assets/images/banner1.png",
-            "https://codepen.io/emanuelemicheletti/pen/abYarrv",
-            "Shop This Product"
-		);
+        miaslider.newSlide(
+                "Third Slide",
+                "Lorem ipsum dolor sit amet",
+                "/public/assets/images/banner1.png",
+                "https://codepen.io/emanuelemicheletti/pen/abYarrv",
+                "Shop This Product"
+        );
 
-		miaslider.init();
+        miaslider.init();
     </script>
 </body>
 </html>
