--- a/home.html
+++ b/home.html
@@ -214,20 +214,19 @@
             <span>
               Dengan menjadi pengajar di sini, kamu dapat bertemu dengan para guru,murid di berbagai daerah dengan latar yang berbeda,serta mendapatkan fasilitas yang menarik
             </span><br>
-            <button class="sk-btn sk-btn-border">Jadi Guru</button>
+            <button class="sk-btn sk-btn-border sk-mt-5">Jadi Guru</button>
           </div>
         </div>
       </div>
     </section>
-    <section id="containByOpening">
+    <section id="containByOpening" class="sk-mt-20">
       <div class="container-grid-opening">
         <div class="grid-item2">
           <div  style="width: 500px;" >
-            <h1>Jadi Guru Disini</h1>
             <span>
-              Dengan menjadi pengajar di sini, kamu dapat bertemu dengan para guru,murid di berbagai daerah dengan latar yang berbeda,serta mendapatkan fasilitas yang menarik
+              Kembangkan Skill Kamu bersama teman-teman mu disini..
             </span><br>
-            <button class="sk-btn sk-btn-border">Jadi Guru</button>
+            <button class="sk-btn sk-btn-border sk-mt-5">Jadi Murid Disni..</button>
           </div>
         </div>
         <div class="grid-item3">
@@ -235,8 +234,53 @@
         </div>
       </div>
     </section>
-
-
+    <section id="containByOpening" class="sk-mt-20">
+      <div class="container-grid-opening">
+        <div class="grid-item4">
+          <div class="image-opening"></div>
+        </div>
+        <div class="grid-item2">
+          <div  style="width: 500px;" >
+            <h1>Mengubah hidup dengan pendidikan</h1>
+            <span>
+              Pelajar di seluruh dunia meluncurkan karir baru, maju di bidang mereka, dan memperkaya hidup mereka.
+            </span><br>
+            <button class="sk-btn sk-btn-border sk-mt-5">Jadi Guru</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="containByFooter" class="sk-mt-45">
+        <table class="table">
+          <tbody>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Sekolahskill</span></td>
+              <td class="table-cell"><span class="table-cell-title">Blog</span></td>
+              <td class="table-cell"><span class="table-cell-title">Terms</span></td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Guruh Sekolahskill</span></td>
+              <td class="table-cell"><span class="table-cell-title">Kontak Cs</span></td>
+              <td class="table-cell"><span class="table-cell-title">Privacy Policy</span></td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Get the app</span></td>
+              <td class="table-cell"><span class="table-cell-title">Affiliate</span></td>
+              <td class="table-cell"><span class="table-cell-title">Cookie Settings</span></td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Tentang Sekolahskill</span></td>
+              <td class="table-cell"><span class="table-cell-title">Invstor</span></td>
+              <td class="table-cell"><span class="table-cell-title">Sitemap</span></td>
+            </tr>
+            <tr class="table-row">
+              <td class="table-cell"><span class="table-cell-title">Kontak Kami</span></td>
+              <td class="table-cell"></td>
+              <td class="table-cell"><span class="table-cell-title">Accessibility Statement</span></td>
+            </tr>
+          </tbody>
+        </table>
+    </section>
 
     <script type="text/javascript">
         
