tambahan file page detail

--- a/home.html
+++ b/home.html
@@ -133,7 +133,7 @@
         </div>
       </div>
     </section>
-
+    <!-- list by topic -->
     <section id="containByTopic">
         <h2>Topik Berdasarkan Kategori</h2>
         <table class="table">
@@ -203,6 +203,7 @@
           </tbody>
         </table>
     </section>
+    <!-- opening -->
     <section id="containByOpening">
       <div class="container-grid-opening">
         <div class="grid-item1">
