--- a/detail_modul.html
+++ b/detail_modul.html
@@ -50,10 +50,19 @@
             <div class="sk-card-videos-views">
                 <div class="sk-thumbnail"></div>
                 <div class="sk-mt-5 sk-flex-column">
-                    <button>Training In House</button>
-                    <button>Via Zoom</button>
-                    <button>Beli Online</button>
+                    <button class="sk-btn-purple sk-mt-5">Training In House</button>
+                    <button class="sk-btn-purple sk-mt-5">Via Zoom</button>
+                    <button class="sk-btn-purple sk-mt-5">Beli Online</button>
                 </div>
+                <p class="sk-mt-70"> Yang Ada Dalam Modul Ini :</p>
+                <ul class="sk-detail-card-video">
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-video-24"></div> <a href="#">14 jam untuk menyaksikan video</a></li>
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-file-24"></div> <a href="#">1 artikel</a></li>
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-folder-download-24"></div> <a href="#">3 materi yang bisa di download</a></li>
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-infinate-24"></div> <a href="#">Akses Bebas</a></li>
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-square-24"></div> <a href="#">Access on mobile and TV</a></li>
+                    <li class="grid-item sk-mt-5"><div class="sk-icon-sertifikat-24"></div> <a href="#">Sertifikat</a></li>
+                </ul>
             </div>
         </div>
     </section>
