--- a/detail_modul.html
+++ b/detail_modul.html
@@ -7,6 +7,7 @@
     <title>Detail Module</title>
     <link rel="stylesheet" href="public\assets\css\vertical-layout-light\index.css">
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
     <nav>
@@ -46,13 +47,136 @@
                     <li><a href="#">Guru</a></li>
                     <li><a href="#">Review</a></li>
                 </ul>
+                <div class="contain-1 sk-mt-45 sk-border">
+                    <h2 class="sk-transparency">Apa Yang Akan Kamu Pelajari</h2>
+                    <table class="table">
+                        <tbody>
+                            <tr class="table-row">
+                                <td class="table-cell">
+                                    <div class="sk-display-flex">
+                                        <div class="sk-icon-checklist-16"></div> Dasar FI'IL
+                                    </div>
+                                </td>
+                                <td class="table-cell">
+                                    <div class="sk-display-flex">
+                                        <div class="sk-icon-checklist-16"></div> latihan buat kalimat dengan fi’il
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="table-row">
+                                <td class="table-cell sk-display-flex">
+                                    <div class="sk-display-flex">
+                                        <div class="sk-icon-checklist-16"></div> 
+                                        Perubahan Bentuk Fi’il
+                                    </div>
+                                </td>
+                                <td class="table-cell sk-display-flex"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="contain-2 sk-mt-45">
+                    <h2 class="sk-transparency">Model Kursus</h2>
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header w-100" id="headingOne">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100">
+                                    <p class="sk-subdetail-title">Apa Itu FI'IL</p> <p class="sk-subdetail-subtitle">2 Materi</p>
+                              </div>
+                            </button>
+                          </h2>
+                          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100">
+                                <p class="sk-subdetail-title">Apa Itu FI'IL</p> <p class="sk-subdetail-subtitle">2 Materi</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header w-100" id="headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100">
+                                <p class="sk-subdetail-title">Apa Itu FI'IL</p> <p class="sk-subdetail-subtitle">2 Materi</p>
+                              </div>
+                            </button>
+                          </h2>
+                          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100">
+                                <p class="sk-subdetail-title">Apa Itu FI'IL</p> <p class="sk-subdetail-subtitle">2 Materi</p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="accordion-item">
+                          <h2 class="accordion-header w-100" id="headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100">
+                                <p class="sk-subdetail-title">Apa Itu FI'IL</p>                                                   
+                                <p class="sk-subdetail-subtitle">2 Materi</p>
+                              </div>
+                            </button>
+                          </h2>
+                          <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100 sk-mt-10">
+                                <div class="sk-display-flex">
+                                  <div class="icon-play-video"></div>&nbsp;&nbsp;<p class="sk-subdetail-title">Apa Itu FI'IL</p>
+                                </div>
+                              </div>
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100 sk-mt-10">
+                                <div class="sk-display-flex">
+                                  <div class="icon-play-video"></div>&nbsp;&nbsp;<p class="sk-subdetail-title">Apa Itu FI'IL</p>
+                                </div>
+                              </div>
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100 sk-mt-10">
+                                <div class="sk-display-flex">
+                                  <div class="icon-play-video"></div>&nbsp;&nbsp;<p class="sk-subdetail-title">Apa Itu FI'IL</p>
+                                </div>
+                              </div>
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100 sk-mt-10">
+                                <div class="sk-display-flex">
+                                  <div class="icon-play-video"></div>&nbsp;&nbsp;<p class="sk-subdetail-title">Apa Itu FI'IL</p>
+                                </div>
+                              </div>
+                              <div class="sk-display-flex sk-transparency sk-justify-content-space-between w-100 sk-mt-10">
+                                <div class="sk-display-flex">
+                                  <div class="icon-play-video"></div>&nbsp;&nbsp;<p class="sk-subdetail-title">Apa Itu FI'IL</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contain-3 sk-mt-45">
+                  <h2>Yang Dibutuhkan</h2>
+                  <div class="sk-mt-20">
+                    <div class="sk-display-flex sk-align-content-center sk-align-items-center">
+                      <div class="icon-cycle"></div>&nbsp;&nbsp;Semangat Belajar
+                    </div>
+                    <div class="sk-display-flex sk-align-content-center sk-align-items-center">
+                      <div class="icon-cycle"></div>&nbsp;&nbsp;Buku Tulis
+                    </div>
+                  </div>
+                </div>
+                <div class="contain-4 sk-mt-45">
+                  <h2>Deskripsi</h2>
+                  <div class="sk-mt-20">
+                    <p>
+                      Pelajaran ini Bertujuan Mengenalkan Kata-Kata kerja dalam bahasa arab beserta bentuk perubahannya,sehingga para murid yang ingin belajar bahasa arab mudah mengetahuinya,Pelajaran Ini Dikemas Dengan Video Yang Menarik Sehingga Para Murid Bisa Menikmatinya
+                    </p>
+                  </div>
+                </div> 
             </div>
             <div class="sk-card-videos-views">
                 <div class="sk-thumbnail"></div>
                 <div class="sk-mt-5 sk-flex-column">
-                    <button class="sk-btn-purple sk-mt-5">Training In House</button>
-                    <button class="sk-btn-purple sk-mt-5">Via Zoom</button>
-                    <button class="sk-btn-purple sk-mt-5">Beli Online</button>
+                    <button class="sk-btn-purple sk-mt-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Training In House</button>
+                    <button class="sk-btn-purple sk-mt-5" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Via Zoom</button>
+                    <button class="sk-btn-purple sk-mt-5" >Beli Online</button>
                 </div>
                 <p class="sk-mt-70"> Yang Ada Dalam Modul Ini :</p>
                 <ul class="sk-detail-card-video">
@@ -65,6 +189,37 @@
                 </ul>
             </div>
         </div>
+      <!-- Modal -->
+      <div class="modal fade sk-transparency" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="form-floating sk-border mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">nama</label>
+              </div>
+              <div class="form-floating sk-border mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">peserta</label>
+              </div>
+              <div class="form-floating sk-border mb-3">
+                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">lokasi</label>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Batal</button>
+              <button type="button" class="btn btn-primary">Ajukan</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
