--- a/detailproduct_guru.html
+++ b/detailproduct_guru.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Product</title>
-    <link rel="stylesheet" href="public/assets/css/vertical-layout-light/app.css">
+    <link rel="stylesheet" href="./scss/app.scss">
 </head>
 
 <body>
