perubahan path image

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 <body>
     <!-- navigisi -->
     <nav id="sk-navbar">
-        <img src="images/logos.png" class="logo" alt="">
+        <img src="public/images/logos.png" class="logo" alt="">
         <input type="search" name="search_global" id="search_global">
         <ul>
             <li>Kelas & Event</li>
@@ -48,7 +48,7 @@
                 <ul>
                     <li>
                         <div class="display-f justify-center">
-                            <img src="images/play.svg" class="sk-img" alt="">
+                            <img src="public/images/play.svg" class="sk-img" alt="">
                         </div>
                         <p class="sk-title">Kelas</p>
                         <p class="sk-subtitle">
@@ -57,7 +57,7 @@
                     </li>
                     <li>
                         <div class="display-f justify-center">
-                            <img src="images/koper.svg" class="sk-img" alt="">
+                            <img src="public/images/koper.svg" class="sk-img" alt="">
                         </div>
                         <p class="sk-title">In Train House</p>
                         <p class="sk-subtitle">
@@ -66,7 +66,7 @@
                     </li>
                     <li>
                         <div class="display-f justify-center">
-                            <img src="images/zoom.png" class="sk-img" alt="">
+                            <img src="public/images/zoom.png" class="sk-img" alt="">
                         </div>
                         <p class="sk-title">Zoom</p>
                         <p class="sk-subtitle">
@@ -75,7 +75,7 @@
                     </li>
                     <li>
                         <div class="display-f justify-center">
-                            <img src="images/event.png" class="sk-img" alt="">
+                            <img src="public/images/event.png" class="sk-img" alt="">
                         </div>
                         <p class="sk-title">Event</p>
                         <p class="sk-subtitle">
@@ -105,11 +105,11 @@
                         <p class="sk-status">Marketing Manager Indosat Ooredoo</p>
                         <ul>
                             <li>
-                                <img src="images/icon-date.svg"  class="icon-date" alt="">
+                                <img src="public/images/icon-date.svg"  class="icon-date" alt="">
                                 <p>23-24 November 2022  |  09.00 - 17.00</p>
                             </li>
                             <li>
-                                <img src="images/icon-point.svg"  class="icon-date" alt="">
+                                <img src="public/images/icon-point.svg"  class="icon-date" alt="">
                                 <p>Burza Hotel Yogyakarta</p>
                             </li>
                         </ul>
@@ -302,7 +302,7 @@
                 <div class="content-row mt-5">
                     <div class="contain-panel-benefit">
                         <div class="contain-icon">
-                            <img src="images/icon-people.svg" alt="">
+                            <img src="public/images/icon-people.svg" alt="">
                         </div>
                         <div class="contain-text">
                             <h3>Pemateri Berpengalaman</h3>
@@ -311,7 +311,7 @@
                     </div>
                     <div class="contain-panel-benefit">
                         <div class="contain-icon">
-                            <img src="images/icon-message.svg" alt="">
+                            <img src="public/images/icon-message.svg" alt="">
                         </div>
                         <div class="contain-text">
                             <h3>Grup Tanya Jawab</h3>
@@ -322,7 +322,7 @@
                 <div class="content-row mt-3">
                     <div class="contain-panel-benefit">
                         <div class="contain-icon">
-                            <img src="images/icon-dollar.svg" alt="">
+                            <img src="public/images/icon-dollar.svg" alt="">
                         </div>
                         <div class="contain-text">
                             <h3>Pemateri Berpengalaman</h3>
@@ -331,7 +331,7 @@
                     </div>
                     <div class="contain-panel-benefit">
                         <div class="contain-icon">
-                            <img src="images/icon-sertifikat.svg" alt="">
+                            <img src="public/images/icon-sertifikat.svg" alt="">
                         </div>
                         <div class="contain-text">
                             <h3>Grup Tanya Jawab</h3>
@@ -344,14 +344,14 @@
         <!-- footer -->
         <footer id="sk-footer" class="sk-footer">
            <div class="bact1">
-                <img src="images/logo2.svg" class="mb-2" alt="logo-sekolahskill">
+                <img src="public/images/logo2.svg" class="mb-2" alt="logo-sekolahskill">
                 <h4 class="mb-2">
                     Wirokerten, Kec. Banguntapan, Kab. Bantul,<br> Daerah Istimewa Yogyakarta (55184)
                 </h4>
                 <div class="contain-icon">
-                    <img src="images/icon-message-footer.svg" alt="email">
-                    <img src="images/icon-whatsaap-footer.svg" alt="whatsapp">
-                    <img src="images/icon-insta-footer.svg" alt="insta">
+                    <img src="public/images/icon-message-footer.svg" alt="email">
+                    <img src="public/images/icon-whatsaap-footer.svg" alt="whatsapp">
+                    <img src="public/images/icon-insta-footer.svg" alt="insta">
                 </div>
                 <div class="sk-copy-right mt-5">
                     <p>Copyright © 2023 | Powered by Pusat Belajar Skill</p>
