--- a/kelasevent.html
+++ b/kelasevent.html
@@ -11,7 +11,7 @@
 <body>
     <!-- navbar -->
     <nav id="sk-navbar">
-        <img src="images/logos.png" class="logo" alt="">
+        <img src="public/images/logos.png" class="logo" alt="">
         <input type="search" name="search_global" id="search_global">
         <ul>
             <li>Kelas & Event</li>
@@ -344,14 +344,14 @@
     </div>
     <footer id="sk-footer" class="sk-footer">
         <div class="bact1">
-             <img src="images/logo2.svg" class="mb-2" alt="logo-sekolahskill">
+             <img src="public/images/logo2.svg" class="mb-2" alt="logo-sekolahskill">
              <h4 class="mb-2">
                  Wirokerten, Kec. Banguntapan, Kab. Bantul,<br> Daerah Istimewa Yogyakarta (55184)
              </h4>
              <div class="contain-icon">
-                 <img src="images/icon-message-footer.svg" alt="email">
-                 <img src="images/icon-whatsaap-footer.svg" alt="whatsapp">
-                 <img src="images/icon-insta-footer.svg" alt="insta">
+                 <img src="public/images/icon-message-footer.svg" alt="email">
+                 <img src="public/images/icon-whatsaap-footer.svg" alt="whatsapp">
+                 <img src="public/images/icon-insta-footer.svg" alt="insta">
              </div>
              <div class="sk-copy-right mt-5">
                  <p>Copyright © 2023 | Powered by Pusat Belajar Skill</p>
