--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="login" class="login">
-        <img src="images/logo2.svg" class="sk-login-image" alt="">
+        <img src="public/images/logo2.svg" class="sk-login-image" alt="">
         <div class="contain-form">
             <div class="sk-form-group">
                 <label for="username">E-mail</label>
@@ -41,7 +41,7 @@
             <button class="sk-login mb-2">Register</button>
             <h2><span>or</span></h2>
             <button class="sk-btn-google">
-                <img src="images/icon-google.svg" alt="google.svg">
+                <img src="public/images/icon-google.svg" alt="google.svg">
                 <p>Login By Google</p>
             </button>
             <div class="mt-3">
